cluster/adsb/deployment-flightradar24.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsb-flightradar24-deployment
  namespace: adsb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flightradar24
  template:
    metadata:
      labels:
        app: flightradar24
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: RECEIVER_TYPE
              value: relay
            - name: BEASTHOST
              value: readsb-data-service.adsb.svc.cluster.local
            - name: BEASTPORT
              value: "30005"
            - name: MLAT
              value: "yes"
          image: cr.nathanv.app/ghcr.io/sdr-enthusiasts/docker-flightradar24@sha256:b0b6b96adaa35f1670c324dbed071f68c025690ccc01d52a040ea8a3e102fb72
          name: flightradar24
          volumeMounts:
            - mountPath: /run
              name: flightradar24-run-vol
      volumes:
        - name: flightradar24-run-vol
          emptyDir:
            medium: Memory
            sizeLimit: 64M
