cluster/adsb/deployment-piaware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsb-piaware-deployment
  namespace: adsb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: piaware
  template:
    metadata:
      labels:
        app: piaware
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: RECEIVER_TYPE
              value: relay
            - name: BEASTHOST
              value: readsb-data-service.adsb.svc.cluster.local
            - name: BEASTPORT
              value: "30005"
            - name: ALLOW_MLAT
              value: "yes"
          image: cr.nathanv.app/ghcr.io/sdr-enthusiasts/docker-piaware@sha256:8c51da8fba1a1035b4a06608a064d71b6678556f68e9b72020ca61d67586405d
          name: piaware
          volumeMounts:
            - mountPath: /run
              name: piaware-run-vol
      volumes:
        - name: piaware-run-vol
          emptyDir:
            medium: Memory
            sizeLimit: 64M
