cluster/adsb/deployment-planefinder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsb-planefinder-deployment
  namespace: adsb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planefinder
  template:
    metadata:
      labels:
        app: planefinder
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: RECEIVER_TYPE
              value: relay
            - name: BEASTHOST
              value: readsb-data-service.adsb.svc.cluster.local
            - name: BEASTPORT
              value: "30005"
          image: cr.nathanv.app/ghcr.io/sdr-enthusiasts/docker-planefinder@sha256:f5b460366fbc54d083b965efcfb60437aec37c984224a39ee1256e3a72fb439b
          name: planefinder
          volumeMounts:
            - mountPath: /run
              name: planefinder-run-vol
      volumes:
        - name: planefinder-run-vol
          emptyDir:
            medium: Memory
            sizeLimit: 64M
