cluster/adsb/deployment-readsb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adsb-readsb-deployment
  namespace: adsb
spec:
  replicas: 1
  serviceName: readsb
  selector:
    matchLabels:
      app: readsb
  template:
    metadata:
      labels:
        app: readsb
    spec:
      nodeSelector:
        hardware: adsb
      containers:
        - env:
            - name: READSB_DEVICE_TYPE
              value: rtlsdr
            - name: READSB_STATS_RANGE
              value: "true"
            # prometheus
            - name: PROMETHEUS_ENABLE
              value: "true"
            - name: TAR1090_ENABLE_AC_DB
              value: "true"
            # web ui
            - name: TAR1090_FLIGHTAWARELINKS
              value: "true"
            # graphs
            - name: GRAPHS1090_DARKMODE
              value: "true"
            - name: GRAPHS1090_HIDE_SYSTEM
              value: "true"
          image: cr.nathanv.app/ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder:telegraf-build-912
          name: readsb
          securityContext:
            privileged: true # for access to the usb dongle
          ports:
            - containerPort: 80 # http server
            - containerPort: 30005 # ads-b data
            - containerPort: 9273 # metrics
            - containerPort: 9274 # metrics
          volumeMounts:
            - mountPath: /var/globe_history
              name: readsb-globe-history-vol
            - mountPath: /var/lib/collectd
              name: readsb-collectd-vol
            - mountPath: /run
              name: ultrafeeder-tmpfs0
            - mountPath: /tmp
              name: ultrafeeder-tmpfs1
            - mountPath: /var/log
              name: ultrafeeder-tmpfs2
      volumes:
        - name: readsb-globe-history-vol
          persistentVolumeClaim:
            claimName: adsb-pvc-readsb-globe-history
        - name: readsb-collectd-vol
          persistentVolumeClaim:
            claimName: adsb-pvc-readsb-collectd
        - emptyDir:
            medium: Memory
          name: ultrafeeder-tmpfs0
        - emptyDir:
            medium: Memory
          name: ultrafeeder-tmpfs1
        - emptyDir:
            medium: Memory
          name: ultrafeeder-tmpfs2
