cluster/adsb/service-readsb-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: readsb-web-service
  namespace: adsb
spec:
  type: ClusterIP
  selector:
    app: readsb
  ports:
    - port: 80
      protocol: TCP
