cluster/adsb/service-telegraf-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-metrics-service
  namespace: adsb
  labels:
    app: readsb-metrics
spec:
  type: ClusterIP
  selector:
    app: readsb
  ports:
    - port: 9273
      protocol: TCP
