cluster/adsb/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readsb-route
  namespace: adsb
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readsb.nathanv.app`)
      kind: Rule
      services:
        - name: readsb-web-service
          port: 80
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
